--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.7.3",
     "postcss": "^8.4.35",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
