--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
+    "sweetalert2": "^11.14.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
